@@ -44,6 +44,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6868) Un-hardcode section edit link style
 * (bug 3205) Stop right floats from stacking horizontally in non-Monobook skins
 * (bug 2013) Inherit ratios and not computed values for line-height
+* Added global $wgStyleVersion to centralize bumping CSS and JS file versions
+  for cache-friendly style and script updating
+
 
 == Languages updated ==
 
